<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textDialogChatroomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_chatroom_name"
            android:textColor="@color/Black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_dialog_chatroom_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDialogChatroomName"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:textSize="15sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relLayout1"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textDialogSecurityLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/security_level"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/input_Dialog_security_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDialogSecurityLevel"
            android:layout_marginTop="10dp"
            android:max="10" />

        <TextView
            android:id="@+id/security_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_Dialog_security_level"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/Black"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/create_dialog_chatroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relLayout2"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/create"
        android:textColor="@color/blue1"
        android:textSize="16sp" />

</RelativeLayout>